@@ -3,6 +3,9 @@
     masterTablesVersion=27 data
   - GEOMS UVVIS.BREWER: added support for template V001
   - GEOMS PANDORA: added support for template V003
+  - S5P L2 AAI: added new 335/367 wavelength pair
+  - S5P L2 CO: added new apriori profile and support for new AVK unit
+  - S5P L2 O3 Profile: added surface_albedo and cloud_albedo
 
 1.14 2021-10-20
 ~~~~~~~~~~~~~~~
